--- a/index.html
+++ b/index.html
@@ -1,103 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Marketing</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Email Marketing</title>
 
-    <!-- Links -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/footer.css">
-    <link rel="stylesheet" href="styles/vars.css">
-
-    <!-- Fontes e Icones -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <!-- Fontes e Icones -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
-<body>
-    <div class="email__marketing__container">
+<body style="background-color: var(--color-two); display: flex; justify-content: center;">
+  <div class="email__marketing__container" style="display: flex; flex-direction: column; width: 40vw; margin-top: 10vh;">
     <main>
-        <div class="header__logo">
-            <i class="fa-regular fa-circle"></i>
+      <div class="header__logo" style="background-color: var(--color-seven); border-radius: 0 0 12px 12px; width: 5rem; height: 6rem; font-size: 3.5rem; position: absolute; left: 60vw; top: 9.5vh; z-index: 2; display: flex; justify-content: center; align-items: center; color: var(--color-one);">
+        <i class="fa-regular fa-circle"></i>
+      </div>
+
+      <div class="master__container" style="background-color: var(--color-one); border-radius: 0 0px 7px 7px; border-top: solid 1rem var(--color-five); z-index: 1; border: solid 1px var(--color-eigth); display: flex; flex-direction: column; padding: 1.25rem;">
+        <div class="header__container" style="display: flex; flex-direction: column; margin: 0 1rem 0 1rem; gap: 4rem;">
+          <div class="header__apresentation__company" style="font-size: 1rem; color: var(--color-three); font-weight: 400; width: 45vw; margin-top: 1.5rem;">
+            Circle / <span style="font-size: 1rem; font-weight: 700; color: var(--color-six);">[nome da empresa]</span>
+          </div>
+          <div class="header__status">
+            <div class="header__apresentation__title" style="font-size: 1.75rem; font-weight: 400; color: var(--color-four);">
+              Olá, <span style="font-weight: 700;">[Nome usuário]</span> seja bem vindo!
+            </div>
+            <div class="header__apresentation__subtitle" style="display: flex; flex-direction: row; gap: 0.75rem; margin-top: 1rem;">
+              <span class="header__apresentation__title__span1" style="font-size: 1rem; color: var(--color-three); font-weight: 400; background-color: var(--color-two); padding: 0.25rem; filter: brightness(95%);">Cadastro</span>
+              <span class="header__apresentation__title__span2" style="color: var(--color-seven); background-color: #EEE9D5; padding: 0.25rem; font-weight: 400;">
+                <i class="fa-solid fa-circle"></i> Aguardando confirmação de e-mail
+              </span>
+            </div>
+          </div>
         </div>
-
-        
-            <div class="master__container">
-                <div class="header__container">
-                    <div class="header__apresentation__company">
-                        Circle / <span>[nome da empresa]</span>
-                    </div>
-                    <div class="header__status">
-                        <div class="header__apresentation__title">
-                            Olá, <span>[Nome usuário]</span> seja bem vindo!
-                        </div>
-                        <div class="header__apresentation__subtitle">
-                            <span class="header__apresentation__title__span1">Cadastro</span>
-                            <span class="header__apresentation__title__span2"><i class="fa-solid fa-circle"></i> Aguardando confirmação de e-mail</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="main__container">
-                    <div class="main__description">
-                        Recebemos uma solicitação de cadastro do e-mail [E-MAIL DA PESSOA] para o portal cir
-                        cle da [EMPRESA]
-                        <br>
-                        <br>
-                        Falta só um passo para você começar a aproveitar as
-                        vantagens da automatização no processo de ingresso fiscal.
-                        Valide seu cadastro confirmando o seu e-mail na plataforma;
-                    </div>
-                    <div class="main__button">
-                        <div>
-                            <button>Confirmar e-mail</button>
-                        </div>
-                        <div>
-                            <span>ou</span> <a href="">https://link.exemplo/Dh3Adfhi3Afhiaijs#jfioa</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="main__footer__container">
-                    <div class="quebralinha">
-                        <hr>
-                    </div>
-                    <div class="main__footer_description">
-                        *Esse cadastro pode ter sido solicitado pelos administradores da [EMPRESA].
-                        Se você não conhece o pedido, aguarde a expiração do cadastro ou entre
-                        em contato com [E-mail do N1]
-                    </div>
-                </div>
-        </main>
-
-        <footer>
-            <div class="footer__container">
-                <div class="footer__description">
-                    <div class="footer__text">
-                        Atenciosamente,
-                        <br>
-                        <span>Equipe Circle & [nome da empresa]</span>
-                    </div> 
-                    <div class="footer__text">
-                        Circle Tecnologia LTDA
-                        <br>
-                        <a href="">https://link.exemplo/</a>
-                    </div> 
-                </div>
-                <div class="footer__icon">  
-                    <i class="fa-regular fa-circle"></i>
-                </div> 
+        <div class="main__container" style="margin: 4rem 1rem 0 1rem; display: flex; flex-direction: column; gap: 4rem;">
+          <div class="main__description" style="font-size: 1.2rem; font-weight: 400; color: var(--color-three);">
+            Recebemos uma solicitação de cadastro do e-mail [E-MAIL DA PESSOA] para o portal cir
+            cle da [EMPRESA]
+            <br><br>
+            Falta só um passo para você começar a aproveitar as vantagens da automatização no processo de ingresso fiscal.
+            Valide seu cadastro confirmando o seu e-mail na plataforma;
+          </div>
+          <div class="main__button" style="display: flex; justify-content: center; align-items: center; flex-direction: column; gap: 1rem;">
+            <div>
+              <button style="padding: 1rem 4rem 1rem 4rem; background-color: var(--color-five); color: var(--color-one); font-size: 1.2rem; font-weight: 700; border-radius: 6px; cursor: pointer;">Confirmar e-mail</button>
             </div>
-
-            <div class="automatic__message">
-                <span>Essa é uma mensagem automática, não responda este e-mail.</span>
-                Em caso de dúvida, entre em contato com [E-mail do N1]
+            <div>
+              <span style="font-size: 1rem; color: var(--color-three); font-weight: 400;">ou</span>
+              <a href="" style="color: var(--color-five); text-decoration: none; cursor: pointer; font-size: 1rem;">https://link.exemplo/Dh3Adfhi3Afhiaijs#jfioa</a>
             </div>
+          </div>
+        </div>
+        <div class="main__footer__container" style="display: flex; flex-direction: column; margin: 2rem 1rem 0 1rem;">
+          <div class="quebralinha">
+            <hr style="width: 100%; margin-bottom: 2rem;">
+          </div>
+          <div class="main__footer_description" style="font-size: 1rem; color: var(--color-three); margin-bottom: 2rem;">
+            *Esse cadastro pode ter sido solicitado pelos administradores da [EMPRESA].
+            Se você não conhece o pedido, aguarde a expiração do cadastro ou entre
+            em contato com [E-mail do N1]
+          </div>
+        </div>
+      </div>
+    </main>
 
-        </footer>
-    </div>
+    <footer>
+      <div class="footer__container" style="margin: 1rem 0 0 0; background-color: var(--color-one); border: solid 1px var(--color-eigth); border-radius: 6px; width: 40vw; display: flex; flex-direction: row; justify-content: space-between;">
+        <div class="footer__description" style="display: flex; flex-direction: column; gap: 2rem; margin: 1rem 0 0 1rem; padding: 1.25rem;">
+          <div class="footer__text" style="font-size: 1rem; color: var(--color-three); font-weight: 400;">
+            Atenciosamente,
+            <br>
+            <span style="font-size: 1rem; font-weight: 700; color: var(--color-six);">Equipe Circle & [nome da empresa]</span>
+          </div>
+          <div class="footer__text" style="font-size: 1rem; color: var(--color-three); font-weight: 400;">
+            Circle Tecnologia LTDA
+            <br>
+            <a href="" style="color: var(--color-five); cursor: pointer; font-size: 1rem;">https://link.exemplo/</a>
+          </div>
+        </div>
+        <div class="footer__icon" style="margin: 1rem 1.5rem 0 0; padding: 1.25rem; color: #B0B0B0; font-size: 5rem; font-weight: 700;">
+          <i class="fa-regular fa-circle"></i>
+        </div>
+      </div>
 
-    <script src="script.js"></script>
+      <div class="automatic__message" style="margin: 2rem 0 3rem 0; display: flex; flex-direction: column; justify-content: center; align-items: center; font-size: 1rem; color: var(--color-three); font-weight: 400;">
+        <span style="font-size: 1rem; color: var(--color-three); font-weight: 700;">Essa é uma mensagem automática, não responda este e-mail.</span>
+        Em caso de dúvida, entre em contato com [E-mail do N1]
+      </div>
+    </footer>
+  </div>
+
+  <style>
+    :root {
+      --color-one: #FFFFFF;
+      --color-two: #ECF1F5;
+      --color-three: #68717c;
+      --color-four: #00637A;
+      --color-five: #09002C;
+      --color-six: #C6977D;
+      --color-seven: #F05E25;
+      --color-eigth: #ced2d6;
+
+      font-family: inter;
+    }
+  </style>
 </body>
 </html>
