--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                 </div>
                 <div class="main__container">
                     <div class="main__description">
-                        Recebemos uma solicitação de cadastro do e-mail [E-MAIL DA PESSOA] para o portal cir
-                        cle da [EMPRESA]
+                        Recebemos uma solicitação de cadastro do e-mail [E-MAIL DA PESSOA] para o portal circle da [EMPRESA]
                         <br>
                         <br>
                         Falta só um passo para você começar a aproveitar as
