--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email Marketing</title>
+
+    <!-- Responsividade -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Links -->
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/vars.css">
+
+    <!-- Fontes e Icones -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="email__marketing__container">
+    <main>
+        <div class="header__logo">
+            <i class="fa-regular fa-circle"></i>
+        </div>
+
+        
+            <div class="master__container">
+                <div class="header__container">
+                    <div class="header__apresentation__company">
+                        Circle / <span>[nome da empresa]</span>
+                    </div>
+                    <div class="header__status">
+                        <div class="header__apresentation__title">
+                            Olá, <span>[Nome usuário]</span> seja bem vindo!
+                        </div>
+                        <div class="header__apresentation__subtitle">
+                            <span class="header__apresentation__title__span1">Cadastro</span>
+                            <span class="header__apresentation__title__span2"><i class="fa-solid fa-circle"></i> Aguardando confirmação de e-mail</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__container">
+                    <div class="main__description">
+                        Recebemos uma solicitação de cadastro do e-mail [E-MAIL DA PESSOA] para o portal circle da [EMPRESA]
+                        <br>
+                        <br>
+                        Falta só um passo para você começar a aproveitar as
+                        vantagens da automatização no processo de ingresso fiscal.
+                        Valide seu cadastro confirmando o seu e-mail na plataforma;
+                    </div>
+                    <div class="main__button">
+                        <div>
+                            <button>Confirmar e-mail</button>
+                        </div>
+                        <div>
+                            <span>ou</span> <a href="">https://link.exemplo/Dh3Adfhi3Afhiaijs#jfioa</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="main__footer__container">
+                    <div class="quebralinha">
+                        <hr>
+                    </div>
+                    <div class="main__footer_description">
+                        *Esse cadastro pode ter sido solicitado pelos administradores da [EMPRESA].
+                        Se você não conhece o pedido, aguarde a expiração do cadastro ou entre
+                        em contato com [E-mail do N1]
+                    </div>
+                </div>
+        </main>
+
+        <footer>
+            <div class="footer__container">
+                <div class="footer__description">
+                    <div class="footer__text">
+                        Atenciosamente,
+                        <br>
+                        <span>Equipe Circle & [nome da empresa]</span>
+                    </div> 
+                    <div class="footer__text">
+                        Circle Tecnologia LTDA
+                        <br>
+                        <a href="">https://link.exemplo/</a>
+                    </div> 
+                </div>
+                <div class="footer__icon">  
+                    <i class="fa-regular fa-circle"></i>
+                </div> 
+            </div>
+
+            <div class="automatic__message">
+                <span>Essa é uma mensagem automática, não responda este e-mail.</span>
+                Em caso de dúvida, entre em contato com [E-mail do N1]
+            </div>
+
+        </footer>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
