--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div>
                             <button>Confirmar e-mail</button>
                         </div>
-                        <div>
+                        <div class="main__button__subtitle">
                             <span>ou</span> <a href="">https://link.exemplo/Dh3Adfhi3Afhiaijs#jfioa</a>
                         </div>
                     </div>
@@ -99,7 +99,5 @@
 
         </footer>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
